--- a/JiraServer/package.json
+++ b/JiraServer/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.4",
     "eslint": "^4.17.0",
     "express": "^4.16.2",
+    "javascript-state-machine": "^3.0.1",
     "mongoose": "^5.0.2",
     "morgan": "^1.9.0"
   },
