--- a/JiraServer/package.json
+++ b/JiraServer/package.json
@@ -21,6 +21,7 @@
     "eslint": "^4.17.0",
     "express": "^4.16.2",
     "javascript-state-machine": "^3.0.1",
+    "jslint": "^0.12.0",
     "mongoose": "^5.0.2",
     "morgan": "^1.9.0"
   },
