--- a/JiraClient/package.json
+++ b/JiraClient/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "tether": "^1.4.3"
   }
 }
