--- a/JiraServer/package.json
+++ b/JiraServer/package.json
@@ -22,8 +22,11 @@
     "express": "^4.16.2",
     "javascript-state-machine": "^3.0.1",
     "jslint": "^0.12.0",
+    "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
